# dce_1.2.2

SVR4/: machdep.mk
admin/: Makefile
admin/dcecp/: Makefile  acl_edit.c  acl_edit.h  acl_tclif.c  acl_tclif.h  aud.h  aud_ops.c  aud_util.c  cdscp.c  cdscp.h  cdscp_cache.c  cdscp_cellalias.c  cdscp_clearinghouse.c  cdscp_link.c  cdscp_object.c  cdscp_utils.c  clock.c  commands.c  dcecp.h  dcp.sams  dcpAppInit.c  dcp_dts.h  dcp_utc.h  dhd.h  dhd_hostdata.c  dhd_keytab.c  dhd_secval.c  dhd_server.c  dhd_util.c  dts_ops.c  dts_proto.h  dts_util.c  log_edit.c  log_edit.h  log_tclif.c  log_tclif.h  main.c  parseargv.c  rgy.c  rgy.h  (+26 more)
admin/dced/: Makefile
admin/expect-5.19/: CHANGES.2to3  CHANGES.3to4  CHANGES.4to5  ChangeLog  Dbg.c  Dbg.h  DbgMkfl.in  Dbg_cf.h.in  Dbgconfig.in  Dbgconfigure  FAQ  HISTORY  INSTALL  Makefile.in  README  aclocal.m4  configure  configure.in  exp_clib.c  exp_closetcl.c  exp_command.c  exp_command.h  exp_console.c  exp_event.h  exp_glob.c  exp_int.h  exp_inter.c  exp_log.c  exp_log.h  exp_main_exp.c  exp_main_sub.c  exp_main_tk.c  exp_memmove.c  exp_poll.c  exp_printify.c  exp_printify.h  exp_prog.h  exp_pty.c  exp_pty.h  exp_regexp.c  (+29 more)
admin/expect-5.19/example/: Makefile  README  archie  autoexpect  autoexpect.man  autopasswd  beer.exp  carpal  chess.exp  chesslib++.c  chesslib.c  chesslib2.c  cryptdir  decryptdir  dislocate  dislocate.man  dvorak  expectd.proto  ftp-inband  ftp-rfc  gethostbyaddr  kibitz  lpunlock  mkpasswd  passmass  passwd.tk  read1char  rftp  rlogin-cwd  rlogin-display  robohunt  rogue.exp  telnet-cwd  telnet-in-bg  term_expect  timed-read  timed-run  tknewsbiff  tkpasswd  tkterm  (+6 more)
admin/expect-5.19/tests/: .Sanitize  all  cat.test  defs  expect.test  pid.test  spawn.test  stty.test
admin/expect-5.19/testsuite/: Makefile.in  configure  configure.in  exp_test.c
admin/expect-5.19/testsuite/config/: default.exp
admin/expect-5.19/testsuite/expect.tests/: expect-tests.exp
admin/expect_dce/: Makefile  exp_command.c  exp_trap.c  exp_tty.c  expect_tcl.h  util_signal.c  util_signal.h
admin/tcl7.3/: Makefile  Makefile.in  README  changes  config.status  configure  configure.in  configure.info  panic.c  patchlevel.h  porting.notes  regexp.c  tcl.h  tclAppInit.c  tclAsync.c  tclBasic.c  tclCkalloc.c  tclCmdAH.c  tclCmdIL.c  tclCmdMZ.c  tclEnv.c  tclExpr.c  tclGet.c  tclGlob.c  tclHash.c  tclHistory.c  tclInt.h  tclLink.c  tclMain.c  tclMtherr.c  tclParse.c  tclProc.c  tclRegexp.h  tclTest.c  tclUnix.h  tclUnixAZ.c  tclUnixStr.c  tclUnixUtil.c  tclUtil.c  tclVar.c
admin/tcl_dce/: Makefile  regexp.c  tcl.h  tcl.sams  tclAppInit.c  tclBasic.c  tclCkalloc.c  tclCmdAH.c  tclCmdIL.c  tclCmdMZ.c  tclEnv.c  tclExpr.c  tclGet.c  tclGlob.c  tclHash.c  tclHistory.c  tclInt.h  tclLink.c  tclMain.c  tclParse.c  tclProc.c  tclTest.c  tclUnixAZ.c  tclUnixStr.c  tclUnixUtil.c  tclUtil.c  tclVar.c  tclWCmdAH.c  tclWCmdIL.c  tclWCmdMZ.c  tclWInt.h  tclWParse.c  tclWUtil.c
config/: Makefile  config.cmd  config.env  dce.rm  dce.unconfig  dce_com_env  dce_com_utils  dce_config  dce_config_env  dce_config_utils  dce_shutdown  dfs.clean  dfs.rm  dfs.unconfig  dfs_config  pwd_config  rc.dce  rc.dfs
config/util/: Makefile  getcellname.c  getip.c
dce/: Buildconf  Buildconf.exp  Buildconf.exp.svr4  Buildconf.svr4  Makefile
dce/AT386/: dce.h
dce/HP800/: dce.h
dce/PMAX/: dce.h
dce/RIOS/: dce.h
dce/SVR4/: dce.h
dce/utils/: Makefile
directory/: Makefile
directory/cds/: Makefile  cds.mk
directory/gds/: .profile.sh  Makefile  gds.mk
directory/xds/: Makefile  dsAbandon.c  dsAddEntry.c  dsBind.c  dsCompare.c  dsExport.c  dsInit.c  dsList.c  dsModEntry.c  dsModRdn.c  dsPAcl.c  dsPCode.c  dsPCreate.c  dsPDelete.c  dsPGet.c  dsPGetBdcp.c  dsPInst.c  dsPMdup.c  dsPPsap.c  dsPPut.c  dsPWkspace.c  dsRead.c  dsRecvRes.c  dsRemEntry.c  dsSearch.c  dsShutdown.c  dsTrace.c  dsUnbind.c  dsUtils.c  dsVersion.c  dsXext.c  xds.mk
directory/xmh/: Makefile
directory/xom/: Makefile  omAlloc.c  omCode.c  omCopy.c  omCopyValu.c  omCreate.c  omDelete.c  omEntry.c  omGet.c  omInst.c  omPut.c  omRead.c  omRemove.c  omTrace.c  omVersion.c  omWkspace.c  omWrite.c  omXext.c  xom.mk
directory/xoms/: Makefile  xoi.c  xoidebug.c  xoiinit.c  xoischema  xoisort.c  xoiutil.c  xos.c  xosattr.c  xosclass.c  xosdebug.c  xosfilter.c  xosname.c  xosutil.c
examples/: Makefile  README
examples/demo/: Makefile  README
examples/svc/: Makefile
examples/timop/: Makefile  Makefile_timop  README  timop.acf  timop.idl  timop_aux.h  timop_client.c  timop_client.h  timop_manager.c  timop_refmon.c  timop_server.c  timop_server.h
file/: Makefile  all.sh  file.mk  install.sh
file/AT386/: machdep.mk
file/HP800/: machdep.mk
file/MMAX/: machdep.mk
file/OSF1.dynamic/: Makefile  dcebase_config.c  px_config.c  sysconfigtab
file/PMAX/: machdep.mk
file/RIOS/: machdep.mk
file/afsd/: Makefile  afsd.c  dfsd_svc.c  dsd.sams  rsearch.c  vsys.c
file/agfs/: Makefile  agfs_mount.h  agfs_vfsops.c  agfs_vnops.c
file/bak/: Makefile  bc.p.h  bc_status.c  bcm.sams  bucoord_errs.et  commands.c  dlq.c  dlq.h  dsvs.c  dump.c  dump_sched.c  error_macros.h  main.c  regex.c  restore.c  status.c  tape_hosts.c  ubik_db_if.c  vol_sets.c  volstub.c
file/bakserver/: Makefile  budb.acf  budb.idl  budb_errs.et  database.c  database.h  db_alloc.c  procs.c  (+11 more)
libdce/: Makefile
libdcedfs/: Makefile
mit_krb5/: Makefile
rpc/: Makefile  rpc.mk
security/: Makefile  security.mk
threads/: Makefile  cma.h  cma_alert.c  cma_alert.h  cma_assem.h  cma_assert.c  cma_assert.h  cma_attr.c  cma_attr.h  cma_cond_defs.h  cma_condition.c  cma_condition.h  cma_config.h  cma_context.c  cma_context.h  cma_crtlx.c  cma_deb_core.c  cma_deb_core.h  cma_deb_event.c  cma_deb_event.h  cma_debug_client.h  cma_debugger.c  cma_debugger.h  cma_defer.c  cma_defer.h  cma_defs.h  cma_dispatch.c  cma_dispatch.h  cma_errno.c  cma_errno.h  cma_errors.c  cma_errors.h  cma_handle.c  cma_handle.h  cma_init.c  cma_init.h  cma_int_errno.h  cma_kernel.c  cma_kernel.h  cma_list.h  (+46 more)
time/: Makefile  time.mk
tools/: Makefile
(+13679 files in other folders)
