#
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for
# the full copyright text.
#
# HISTORY
# $Log: configure.in,v $
# Revision 1.1.2.1  1996/08/09  19:36:29  arvind
# 	DCE 1.2.2 intermediate drop (post bl3/pre bl4)
# 	[1996/08/09  19:31:30  arvind]
#
# $EndLog$
#

dnl Process this file with autoconf to produce a configure script.
AC_INIT(exp_test.c)
CC=${CC-cc}
AC_C_CROSS
dnl AC_CANONICAL_HOST

# This is for LynxOS, which needs a flag to force true POSIX when
# building. It's weirder than that, cause the flag varies depending
# how old the compiler is. So...
# -X is for the old "cc" and "gcc" (based on 1.42)
# -mposix is for the new gcc (at least 2.5.8)
# This modifies the value of $CC to have the POSIX flag added
# so it'll configure correctly
CY_TCL_LYNX_POSIX
CY_PATH_TCLH

AC_SUBST(CC)
AC_SUBST(host)
AC_OUTPUT(Makefile)
